--- a/mall/package.json
+++ b/mall/package.json
@@ -13,10 +13,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "zrender": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
