--- a/mall/package.json
+++ b/mall/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.19.2",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
     "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
